Bunch of changes to get working again in 2022:
"--add-opens all unnamed" in arquillian, mockery.
Centralize ALL properties, add enforcer-plugin in parent pom.
Bump lots of versions.